src/components/App/App.css
#app-body{
  font-family: Segoe UI, "Roboto", sans-serif;
  text-align: center;
  max-width: 1400px;
  margin: auto;
}

html {
  overflow-y: scroll;
}

h1, h2, h3, h4 {
  font-weight: 400;
}

select, form {
  -webkit-appearance: none;
  -moz-appearance: none;
}

.inline-display{
  display: inline;
}
.input-container{
  margin: 20px 0px;
}

.input-field{
  border: 0;
  box-shadow: 0px 0px 0px 1px #e5e5e5;
  box-sizing: border-box;
  border-radius: 2.5px;
  padding: 20px 20px;
  font-size: 17.5px;
  display: block;
  margin: auto;
  outline: none;
  transition: all 0.3s;
  width: 100%;
}

.input-field:focus{
  box-shadow: 0px 0px 0px 1px #007bff;
}

.input-container label {
  background-color: #fff;
  color: rgba(0, 0, 0, 0.486);
  cursor: text;
  left: 5%;
  padding: 0 5px;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  transition: all 0.35s;
  text-align: left;
}

.input-container input:not([value=""]) + label,
.input-container input:focus + label {
  transform: scale(0.75) translate(-20%, -250%);
  width: fit-content;
}

.button{
  background-color: #050F19;
  color: #fff;
  border-style: none;
  border-radius: 5px;
  padding: 15px 0px;
  margin: 10px auto;
  width: 100%;
  font-size: 18px;
}

.button:hover{
  cursor: pointer;
}

.button:focus{
  outline: none;
}
.error-message{
  color: #dc3545;
  font-size: 12px;
}

button:hover{
  cursor: pointer;
}

.password-toggle{
  position: absolute;
  right: 10px;
  bottom: 35%;
}

.cursor-pointer:hover{
  cursor: pointer;
}

.show{
  display: block !important;
}

.hide{
  display: none !important;
}

.text-background{
  background-image: url('https://images.unsplash.com/photo-1553356084-58ef4a67b2a7?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8Y29sb3JmdWx8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=60');
  background-clip: text;
  -webkit-background-clip: text;
  color: transparent;
  font-size: 40px;
}

.greeting-container{
  width: 70%;
  margin: 50px auto 0;
}

.large-text{
  font-size: 35px;
}

@keyframes fade-down{
  from {transform: translateY(-75px);}
  to {transform: translateY(0);}
}

@keyframes drop-down {
  from {opacity: 0; transform: translateY(-50px);}
  to {opacity: 1; transform: translateY(0);} 
}

@media only screen and (max-width: 768px) {
  .large-text{
    font-size: 25px;
  }#nav-container li:not(.mobile-menu-item){
    display: none;
  }
  #nav-container #home{
    left: 10px;
  }
  #nav-container #burger, #nav-container #logo{
    display: block;
  }
  .jumbo-header{
    font-size: 2.6em;
    padding: 3em 0.5em 0;
  }
  .home-container .greeting-container .jumbo-info{
    font-size: 15px;
    line-height: 1.5;
    margin: auto 10px;
  }
  .greeting-container{
    width: 100% !important;
  }
  .greeting-container .button{
    margin: auto 10px;
    font-size: 13px;
  }
  .home-container .jumbo{
    height: 65vh;
  }
  .home-container .banner-container{
    min-height: auto;
    height: 250px;
  }
  .home-container .jumbo-overlay {
    background-color: rgba(0,0,0,0.5);
  }
  .banner-container .collection-text{
    font-size: 22px;
    padding-top: 60px;
  }
  .banner-container .button {
    padding: 15px 20px;
    font-size: 13px;
  }
  #sell-body #searchbar-heading{
    margin-top: 20vh;
  }
  #sell-body #search-bar{
    width: auto;
  }
  .account-container .email {
    margin-left: 10px;
  }
  #footer{
    font-size: 13px;
  }
}

@media only screen and (max-width: 684px) {
  .large-text{
    font-size: 20px;
  }
}

@media only screen and (max-width: 600px) {
  .large-text{
    font-size: 15px;
  }
}

@media only screen and (min-width: 1400px){
  .full-width{
    width: 98.9vw;
    left: -60px;
    position: relative;
  }
}


.button{
  transition: background-color 0.5s;
}

